Add page break before Discussion & Conclusion section in TuDoor article

--- a/modele/rendu_article_tudoor_AUTRET_TERRIEN.tex
+++ b/modele/rendu_article_tudoor_AUTRET_TERRIEN.tex
@@ -412,6 +412,8 @@ for large payloads, systems effectively close the "logic doors" exploited by the
 the systematic implementation of DNSSEC provides a definitive layer of protection, as the cryptographic verification of records ensures 
 that any successfully injected but forged data is discarded during the validation phase.
 
+\newpage
+
 %% ==========================================
 %% 4. DISCUSSION & CONCLUSION
 %% ==========================================
